force-app/main/default/objects/Retail_Customer__c/Retail_Customer__c.object-meta.xml
<CustomObject>
    <label>Retail Customer</label>
    <nameField>
        <displayFormat>RC-{0000}</displayFormat>
        <label>Retail Customer ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retail Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>