force-app/main/default/objects/Retail_Customer__c/fields/Assign_Credit_limit__c.field-meta.xml
<CustomField>
    <fullName>Assign_Credit_limit__c</fullName>
    <label>Assign Credit limit?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>