force-app/main/default/objects/Retail_Customer__c/fields/Billing_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_First_Name__c</fullName>
    <label>Billing First Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>