force-app/main/default/objects/Retail_Customer__c/fields/Credit_Limit_Overshot__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_Overshot__c</fullName>
    <label>Credit Limit Overshot</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>