force-app/main/default/objects/Retail_Customer__c/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <label>Customer Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Retailer</fullName>
                <default>true</default>
                <label>Retailer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>