force-app/main/default/objects/Retail_Customer__c/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>District</label>
    <referenceTo>Retail_District__c</referenceTo>
    <relationshipLabel>Retail Customers</relationshipLabel>
    <relationshipName>Retail_Customers</relationshipName>
    <type>Lookup</type>
</CustomField>