force-app/main/default/objects/Retail_Customer__c/fields/Greylisted__c.field-meta.xml
<CustomField>
    <fullName>Greylisted__c</fullName>
    <label>Greylisted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>