force-app/main/default/objects/Retail_Customer__c/fields/Is_Previous_Payment_Pending__c.field-meta.xml
<CustomField>
    <fullName>Is_Previous_Payment_Pending__c</fullName>
    <label>Is Previous Payment Pending</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>