force-app/main/default/objects/Retail_Customer__c/fields/Link_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Link_Lead_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Link Lead ID</label>
    <referenceTo>Retail_Lead__c</referenceTo>
    <relationshipLabel>Retail Customers</relationshipLabel>
    <relationshipName>Retail_Customers</relationshipName>
    <type>Lookup</type>
</CustomField>