force-app/main/default/objects/Retail_Customer__c/fields/Order_Counter__c.field-meta.xml
<CustomField>
    <fullName>Order_Counter__c</fullName>
    <label>Order Counter</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>