force-app/main/default/objects/Retail_Customer__c/fields/Retail_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Retail_Warehouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warehouse Code</label>
    <referenceTo>Retail_Warehouse__c</referenceTo>
    <relationshipLabel>Retail Customers</relationshipLabel>
    <relationshipName>Retail_Customers</relationshipName>
    <type>Lookup</type>
</CustomField>