force-app/main/default/objects/Retail_Customer__c/fields/Returning_Customer__c.field-meta.xml
<CustomField>
    <fullName>Returning_Customer__c</fullName>
    <label>Returning Customer?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>