force-app/main/default/objects/Retail_Customer__c/fields/Shop_Address__c.field-meta.xml
<CustomField>
    <fullName>Shop_Address__c</fullName>
    <label>Shop Address</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>