force-app/main/default/objects/Retail_Customer__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>State</label>
    <referenceTo>Retail_State__c</referenceTo>
    <relationshipLabel>Retail Customers</relationshipLabel>
    <relationshipName>Retail_Customers</relationshipName>
    <type>Lookup</type>
</CustomField>