force-app/main/default/objects/Retail_Customer__c/fields/Taluka__c.field-meta.xml
<CustomField>
    <fullName>Taluka__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Taluka</label>
    <referenceTo>Retail_Taluka__c</referenceTo>
    <relationshipLabel>Retail Customers</relationshipLabel>
    <relationshipName>Retail_Customers</relationshipName>
    <type>Lookup</type>
</CustomField>