force-app/main/default/objects/Retail_Customer__c/validationRules/Phone_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( OR( ISBLANK( Phone_Number__c ), REGEX(  Phone_Number__c ,&quot;^[1-9][0-9]*$&quot;)))</errorConditionFormula>
    <errorDisplayField>Phone_Number__c</errorDisplayField>
    <errorMessage>Enter Valid Phone Number</errorMessage>
</ValidationRule>