force-app/main/default/objects/Retail_Customer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Link_Lead_ID__c</columns>
    <columns>Shop_Name__c</columns>
    <columns>Email__c</columns>
    <columns>Greylisted__c</columns>
    <columns>Blacklisted__c</columns>
    <columns>Order_Counter__c</columns>
    <columns>New_Customer__c</columns>
    <columns>Returning_Customer__c</columns>
    <columns>Last_Order_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>